# private-personal-proxy

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
config/: settings.yaml
src/: __init__.py  bootstrap.py  logging_setup.py  main.py  streamlit_chat.py  streamlit_chat_history.py
src/api/: __init__.py  routes.py
src/config/: __init__.py  dynaconf.py  models.py
src/graph/: __init__.py  advisory_graph.py  state.py
src/models/: __init__.py  enums.py  grounding.py  llm_schema.py  request.py  response.py
src/observability/: __init__.py  privacy.py
src/prompts/: __init__.py  advisory_prompts.py  guardrail_prompts.py  streamlit_chat_prompts.py
src/rag/: __init__.py  chunker.py  embeddings.py  ingestion.py  loaders.py  retriever.py  store.py  tools.py
src/services/: __init__.py  advisory.py  circuit_breaker.py  llm_client.py  post_processor.py  topic_guardrail.py
